--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -33,6 +33,11 @@
 	width:250px;
 	padding:20px;
 }
+.item-name{
+	height:auto;
+	width:135px;
+	text-align:justify;
+}
 p{
 	text-align:justify;
 }
