--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <% for item in @items %>
 	<div class="img">
 		 <a><img src="<%= item.image %>" alt="(oops)" width="110" height="90"></a>
-		 <div class="desc"><b><center><%= item.name %></center></b></div>
+		 <div class="descrip"><b><center><%= item.name %></center></b></div>
 	</div>
 <% end %>
