--- a/app/views/items/search.html.erb
+++ b/app/views/items/search.html.erb
@@ -16,7 +16,9 @@
 			<hr>
 				<%= form_for :item, :url =>new_user_request_path(current_user), :method =>:get do |f| %>
 					<div class="form-group inner-items">
-						<h4><%= link_to item.name, user_item_view_path(current_user,item) %></h4>
+						<div class="item-name">
+							<h4><%= link_to item.name, user_item_view_path(current_user,item) %></h4>
+						</div>
 					</div>
 					<%= f.hidden_field :item_id, :value=> item.id  %>
 					<div class="form-group inner-items">
