--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -27,6 +27,9 @@
 	float:left;
 	padding:20px;
 }
+.rqt-but{
+	padding-left:50px;
+}
 .item-in{
 	float:left;
 	height:100%;
@@ -37,6 +40,10 @@
 	height:auto;
 	width:135px;
 	text-align:justify;
+}
+.item_img{
+	height:500px;
+	width:300px;
 }
 p{
 	text-align:justify;
