--- a/app/views/items/search.html.erb
+++ b/app/views/items/search.html.erb
@@ -11,24 +11,40 @@
 		</div>
 	<% end %>
 	<div id="items">
-	 <% if @items.any? %>	
+	 <% if @items.any? %>
+	 <table class="table table-striped">
+	 	<tr><td><h4>Item<h4></td><td><h4>Owner<h4></td><td><h4>Request<h4></td></tr>
 			<% for item in @items %>
-			<hr>
-				<%= form_for :item, :url =>new_user_request_path(current_user), :method =>:get do |f| %>
-					<div class="form-group inner-items">
-						<div class="item-name">
-							<h4><%= link_to item.name, user_item_view_path(current_user,item) %></h4>
-						</div>
-					</div>
-					<%= f.hidden_field :item_id, :value=> item.id  %>
-					<div class="form-group inner-items">
-						<h4>Owner&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<%= item.user.name %></h4>
-					</div>
-					<div class="form-group inner-items">
-						<%= f.submit 'request', class: "btn btn-success" %>
-					</div>
+					<% if item.user != current_user %>
+						<tr>
+							<%= form_for :item, :url =>new_user_request_path(current_user), :method =>:get do |f| %>
+								<td>
+										<div class="form-group">
+												<h4><%= link_to item.name, user_item_path(current_user,item) %></h4>
+										</div>
+								</td>
+								<td>
+									<%= f.hidden_field :item_id, :value=> item.id  %>
+									<div class="form-group">
+										<h4><%= item.user == current_user ? "me" : item.user.name %></h4>
+									</div>
+								</td>
+								<td>
+										<% if (item.availability == false) %>
+											<div class="form-group rqt-but"> 
+												<%= f.submit 'request', class: "btn btn-success disabled" %>
+											</div>
+										<% else %>
+											<div class="form-group rqt-but"> 
+												<%= f.submit 'request', class: "btn btn-success" %>
+											</div>
+										<% end %>
+								</td>
+							<% end %>
+						</tr>
 				<% end %>
 			<% end %>
+		</table>
 		<% else %>
 		 	 <p>No results found! </p>
 		<% end %>
